syntax = "proto3";
package echo;

service Echo {
    rpc ReplyEcho (EchoRequest) returns (EchoResponse);
}

message EchoRequest {
   string message = 1;
}

message EchoResponse {
    string message = 1;
}
